--- a/public/index.html
+++ b/public/index.html
@@ -10,21 +10,19 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    
+
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--=====FONT AWESOME SCRIPT-->
-    <link href="./fontawesome/css/all.css" rel="stylesheet">
-      <!--=====MATERIAL ICONS-->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
-    <title>React App</title>
+    <link href="./fontawesome/css/all.css" rel="stylesheet" />
+    <!--=====MATERIAL ICONS-->
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+    <title>Temitayo Afolabi</title>
   </head>
   <body>
-    
     <div id="root"></div>
-   
-
-
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   </body>
